--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 body{
     background-image: url(img/Skärmbild\ 2024-11-22\ 142012.png);
-    background-repeat:repeat-x
-    background-repeat:repeat-y
-
+    background-repeat:repeat;
 }
 
 
 h1{
     color: white;
-    background-color: rgb(113, 32, 5);
+    background-color: rgb(100, 8, 8);
     margin-top: 40px;
-    border: white solid 2px;
-    width: 50%;
+    border: white solid 1px;
+    width: 60%;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    padding: 10px;
 }
 .recepten{
     justify-self: center;
@@ -135,7 +134,7 @@ h1{
 nav{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    background-color: rgb(168, 130, 117);
+    background-color: rgb(168, 82, 54);
     margin-top: 40px;
     border: white solid 2px;
     width: 60%;
